--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "koa-pug": "^3.0.0-2",
     "koa-redis": "^3.0.0",
     "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0",
     "media-typer": "^0.3.0",
     "mime-db": "^1.27.0",
     "mime-types": "^2.1.15",
