--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "accepts": "^1.3.3",
     "any-promise": "^1.3.0",
+    "busboy": "^0.2.14",
     "co": "^4.6.0",
     "content-disposition": "^0.5.2",
     "content-type": "^1.0.2",
