--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "accepts": "^1.3.3",
     "any-promise": "^1.3.0",
-    "bootstrap": "^3.3.7",
     "busboy": "^0.2.14",
     "co": "^4.6.0",
     "content-disposition": "^0.5.2",
@@ -55,9 +54,12 @@
     "vary": "^1.1.1"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1"
+    "gulp-browserify": "^0.5.1",
+    "gulp-nodemon": "^2.2.1",
+    "jquery": "^3.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
