--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
+    "gulp-changed": "^3.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.1.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
